	PR target/52555 	* genopinit.c (raw_optab_handler): Use this_fn_optabs. 	(swap_optab_enable): Same. 	(init_all_optabs): Use argument instead of global. 	* tree.h (struct tree_optimization_option): New field 	target_optabs. 	* expr.h (init_all_optabs): Add argument to prototype. 	(TREE_OPTIMIZATION_OPTABS): New. 	(save_optabs_if_changed): Protoize. 	* optabs.h: Declare this_fn_optabs. 	* optabs.c (save_optabs_if_changed): New. 	Declare this_fn_optabs. 	(init_optabs): Add argument to init_all_optabs() call. 	* function.c (invoke_set_current_function_hook): Handle per 	function optabs. 	* function.h (struct function): New field optabs. 	* config/mips/mips.c (mips_set_mips16_mode): Handle when 	optimization_current_node has changed. 	* target-globals.h (save_target_globals_default_opts): Protoize. 	* target-globals.c (save_target_globals_default_opts): New. c-family/ 	* c-common.c (handle_optimize_attribute): Call 	save_optabs_if_changed.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@196129 138bc75d-0d04-0410-961f-82ee72b054a4